<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/pop"
            android:contentDescription="@string/quiz_logo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="#d60000" />
        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/_1_pop_art_was_a_reaction_to_what_other_art_movement"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q1_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/cubism"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q1_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/romanticism"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q1_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/neo_impressionism"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q1_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/abstract_expressionism"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#d60000" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/_2_which_of_the_following_people_are_associated_with_the_pop_art_movement_check_all_that_apply"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q2_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/mary_cassat"
            android:textSize="18sp" />


        <CheckBox
            android:id="@+id/Q2_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/pablo_picasso"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q2_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/jasper_johns"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q2_answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/frida_kahlo"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/Q2_answer6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/richard_hamilton"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#d60000" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/_3_which_pop_artist_is_attributed_with_this_well_known_quote"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/everyone_will_be_famous_for_15_minutes"/>

        <EditText
            android:id="@+id/artist_answer"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:layout_gravity="center"
            android:hint="@string/type_the_artist_s_name_here"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#d60000" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/_4_true_or_false_the_pop_art_movement_began_in_the_1950_s"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/correct"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/incorrect"
                android:textSize="18sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#d60000" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/flag_image"
            android:scaleType="fitCenter"
            android:src="@drawable/flag" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/_5_who_painted_the_iconic_image_above"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q5_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/david_hockney"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Q5_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/andy_warhol"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Q5_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/jasper_johns"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Q5_answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/jackson_pollock"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Q5_answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/none_of_the_above"
                android:textSize="18sp" />

        </RadioGroup>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="#d60000" />

        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/_6_true_or_false_the_united_states_was_the_only_country_to_truly_embrace_pop_art"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/false_button_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/incorrect"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/true_button_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/correct"
                android:textSize="18sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#d60000" />


        <Button
            android:id="@+id/score_button"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="125dp"
            android:layout_marginStart="125dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="18dp"
            android:background="#d60000"
            android:onClick="getScore"
            android:text="@string/check_my_answers"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="#eeeeee"
            android:onClick="resetQuiz"
            android:text="@string/reset"
            android:fontFamily="sans-serif"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/go_to_web_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            style="@style/myImageView"
            android:src="@drawable/soup"
            android:contentDescription="@string/soup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:textColor="#000000"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/click_on_the_soup_can_above_to_learn_even_more_about_pop_art"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
